--- a/bluetoothandroid/src/main/res/values/color.xml
+++ b/bluetoothandroid/src/main/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
+    <color name="sdk_control_btn_finish">#1e1f20</color>
 </resources>
