--- a/bluetoothandroid/src/main/res/values/styles.xml
+++ b/bluetoothandroid/src/main/res/values/styles.xml
@@ -10,4 +10,13 @@
         <item name="android:backgroundDimEnabled">true</item> <!-- 模糊 -->
     </style>
 
+
+
+    <style name="sdk_transparent">
+        <item name="android:windowBackground">@color/sdk_transparent_background</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
+    </style>
+
 </resources>
