--- a/bluetoothandroid/src/main/res/layout/activity_blue_conn.xml
+++ b/bluetoothandroid/src/main/res/layout/activity_blue_conn.xml
@@ -38,7 +38,7 @@
                 android:gravity="center">
 
 
-                <com.tsinova.bike.view.RippleSpreadView
+                <com.tsinova.bluetoothandroid.view.RippleSpreadView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
