--- a/src/main/res/layout/activity_blue_conn.xml
+++ b/src/main/res/layout/activity_blue_conn.xml
@@ -284,7 +284,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="120dp"
-                android:text="通讯失败"
+                android:text="通信失败"
                 android:textColor="#ffffff"
                 android:textSize="21sp" />
 
