--- a/src/main/res/layout/activity_blue_conn.xml
+++ b/src/main/res/layout/activity_blue_conn.xml
@@ -160,10 +160,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="服务时间：周一至周日9:30-18:30(法定节假日除外)"
+                    android:text="服务时间：周一至周五，上午9:00~12:00，"
                     android:textColor="#ffffff"
                     android:textSize="12sp" />
 
+                <TextView
+                    android:id="@+id/tv_16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="下午13:00~18:00（不包含法定节假日）"
+                    android:textColor="#ffffff"
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -269,7 +276,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="服务时间：周一至周日9:30-18:30(法定节假日除外)"
+                    android:text="服务时间：周一至周五，上午9:00~12:00，"
+                    android:textColor="#ffffff"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_26"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="下午13:00~18:00（不包含法定节假日）"
                     android:textColor="#ffffff"
                     android:textSize="12sp" />
 
