--- a/src/main/res/layout/activity_blue_conn.xml
+++ b/src/main/res/layout/activity_blue_conn.xml
@@ -184,7 +184,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="120dp"
-                android:text="sdk_bluetooth_conn_search_failure"
+                android:text="@string/sdk_bluetooth_conn_search_failure"
                 android:textColor="#ffffff"
                 android:textSize="21sp" />
 
