--- a/src/main/res/layout/custom_dialog2.xml
+++ b/src/main/res/layout/custom_dialog2.xml
@@ -27,11 +27,14 @@
 
             <TextView
                 android:id="@+id/tv_12"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:layout_below="@+id/tv_11"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp"
                 android:text="@string/sdk_bluetooth_conn_bike_not_found"
                 android:textColor="#ffffff" />
 
