--- a/src/main/res/layout/custom_dialog2.xml
+++ b/src/main/res/layout/custom_dialog2.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:background="@drawable/shape_conn">
 
         <RelativeLayout
@@ -32,7 +33,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="true"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="0dp"
                 android:text="@string/sdk_bluetooth_conn_communication_failure"
                 android:textColor="#ffffff"
                 android:textSize="21sp" />
@@ -72,9 +73,9 @@
                 android:id="@+id/ll_hotline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@id/btn_1"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="0dp"
                 android:gravity="bottom"
                 android:orientation="vertical">
 
